[package]
name = "notion-flows"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"

tokio = { version = "1.28.1", features = ["macros", "time"] }
futures = "0.3.28"

reqwest = { version = "0.11.16", features = ["json"] }

sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }

serde = "1.0.159"
serde_json = "1.0.95"

once_cell = "1.17.1"
chrono = "0.4.24"

env_logger = { version = "0.10.0", optional = true}

[features]
debug = ["env_logger"]
